--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,3 +1,18 @@
 <!-- start custom footer snippets -->
+<a>
+    <a target="_blank" title="random img"><img
+            src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/ApprehensiveRashAvians-max-1mb.gif"
+            width="200" height="60">
+    </a>
+    <a target="_blank" title="random img"><img
+            src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/aolsucks.gif" width="200" height="60">
+    </a>
+    <a target="_blank" title="random img"><img
+            src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/hicolors.webp" width="200"
+            height="60">
+    </a>
+    <a target="_blank" title="anti elecron"><img
+            src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/elecron.png" width="200" height="60">
 
-<!-- end custom footer snippets -->
+    </a>
+    <!-- end custom footer snippets -->
