--- a/_includes/footer/custom.html
+++ b/_includes/footer/custom.html
@@ -1,10 +1,10 @@
 <!-- start custom footer snippets -->
 <a>
         <a target="_blank" title="random img"><img
-                        src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/aolsucks.gif" width="200"
+                        src="https://github.com/pilz0/webbed_page/blob/master/assets/aolsucks.gif?raw=true" width="200"
                         height="60">
         </a>
         <a target="_blank" title="random img"><img
-                        src="https://raw.githubusercontent.com/pilz0/pilz0.github.io/main/img/hicolors.webp" width="200"
+                        src="https://raw.githubusercontent.com/pilz0/webbed_page/master/assets/hicolors.webp" width="200"
                         height="60">
                 <!-- end custom footer snippets -->
